--- a/package.json
+++ b/package.json
@@ -1,31 +1,48 @@
 {
-    "name": "nginx-obs-automatic-low-bitrate-switching",
-    "version": "1.9.4",
-    "description": "Simple app to automatically switch scenes based on the current bitrate on the nginx stats page.",
-    "main": "lib/app",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node ./lib/app",
-        "build": "babel src -d lib",
-        "dev": "nodemon --exec babel-node ./src/app.js"
-    },
-    "author": "Brian Spit",
-    "license": "MIT",
-    "dependencies": {
-        "fast-fuzzy": "^1.10.8",
-        "node-fetch": "^2.6.1",
-        "node-media-server": "^2.2.4",
-        "obs-websocket-js": "^4.0.2",
-        "signale": "^1.4.0",
-        "string-template": "^1.0.0",
-        "ws": "^6.2.1",
-        "xml2js": "^0.4.23"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.12.13",
-        "@babel/core": "^7.12.13",
-        "@babel/node": "^7.12.13",
-        "@babel/preset-env": "^7.12.13",
-        "nodemon": "^2.0.7"
-    }
+  "name": "nginx-obs-automatic-low-bitrate-switching",
+  "version": "1.9.4",
+  "description": "Simple app to automatically switch scenes based on the current bitrate on the nginx stats page.",
+  "main": "lib/app",
+  "bin": "lib/app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./lib/app",
+    "build": "babel src -d lib",
+    "dev": "nodemon --exec babel-node ./src/app.js",
+    "build-exe": "node ./scripts/build.js"
+  },
+  "author": "Brian Spit",
+  "license": "MIT",
+  "dependencies": {
+    "fast-fuzzy": "^1.10.8",
+    "node-fetch": "^2.6.1",
+    "node-media-server": "^2.2.4",
+    "obs-websocket-js": "^4.0.2",
+    "signale": "^1.4.0",
+    "string-template": "^1.0.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5",
+    "ws": "^6.2.1",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/node": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "fs-extra": "^10.0.0",
+    "nodemon": "^2.0.7",
+    "pkg": "^5.1.0",
+    "rimraf": "^3.0.2"
+  },
+  "pkg": {
+    "assets": [
+      "locales",
+      "nginx"
+    ],
+    "targets": [
+      "node14-win-x64"
+    ],
+    "outputPath": "bin"
+  }
 }
